--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                 <h2>联系我们</h2>
                 <p>如果您在使用过程中遇到任何问题，或有任何建议和反馈，欢迎通过以下方式联系我们：</p>
                 <div class="contact-info">
-                    <p><strong>技术支持邮箱：</strong> support@huihuiqi.com</p>
+                    <p><strong>技术支持邮箱：</strong> 284014251@qq.com</p>
                     <p><strong>公司名称：</strong> 湖南辉启信息技术有限公司</p>
                     <p><strong>应用名称：</strong> 爱了么(贴贴雷达)</p>
                 </div>
